# Shiro

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: ShiroDependencies.cmake  ShiroOptions.cmake
docs/: architecture.md  build.md  codex-handoff.md  research.md  roadmap.md
include/shiro/backend/: RenderBackend.h
include/shiro/backend/cpu/: CpuPathTracer.h
include/shiro/backend/optix/: OptixBackend.h  OptixLaunchParams.h
include/shiro/core/: Config.h
include/shiro/hydra/: Camera.h  Light.h  Material.h  Mesh.h  RenderBuffer.h  RenderDelegate.h  RenderParam.h  RenderPass.h  RendererPlugin.h  SceneBridge.h  Tokens.h
include/shiro/render/: EnvironmentMap.h  FrameBuffer.h  OpenQmcSampler.h  Renderer.h  Types.h
plugins/: UsdRenderers.json
plugins/hdShiro/: plugInfo.json
plugins/houdini/otls/: generate_shiro_lops.py
plugins/houdini/soho/parameters/: HdShiroRendererPlugin_Viewport.ds  HdShiroXpuRendererPlugin_Global.ds
plugins/usd_plugins/: plugInfo.json
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  RenderBackend.cpp
src/backend/cpu/: CpuPathTracer.cpp
src/backend/optix/: OptixBackend.cpp  OptixPrograms.cu
src/frontend/: CMakeLists.txt
src/hydra/: Camera.cpp  Light.cpp  Material.cpp  Mesh.cpp  RenderBuffer.cpp  RenderDelegate.cpp  RenderParam.cpp  RenderPass.cpp  RendererPlugin.cpp  SceneBridge.cpp  Tokens.cpp
src/render/: EnvironmentMap.cpp  FrameBuffer.cpp  OpenQmcSampler.cpp  Renderer.cpp
src/runtime/: CMakeLists.txt
testscenes/: minimal.usda  sphere_material_dome.usda  sphere_material_dome_shiro_high.usda  standard_surface_full.usda  standard_surface_grid.usda  transmission_debug.usda
tools/: CMakeLists.txt  install_cuda_almalinux9.sh  optix_probe.cpp  shiro_houdini_env.sh
